# sha

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: throughput.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hash_chunking.rs  parse_algorithm.rs  parse_checksum_line.rs
scripts/: bench-vs-coreutils.sh  render-results.py
scripts/profiling/: cpu-profile.stp  io-profile.stp  profile-sha-vs-coreutils.sh
src/: algo_convert.rs  algorithm.rs  checksum.rs  cli.rs  commands.rs  hasher.rs  lib.rs  logging.rs  main.rs
tests/: cli.rs
