[package]
name = "sha"
version = "0.1.0"
edition = "2021"
description = "A fast, parallel CLI for computing and verifying MD5, SHA-1, SHA-2, and SHA-3 file hashes"
license = "MIT OR Apache-2.0"

[lib]
name = "sha"
path = "src/lib.rs"
bench = false

[[bin]]
name = "sha"
path = "src/main.rs"
bench = false

[[bench]]
name = "throughput"
harness = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }
rayon = "1.10"
sha1 = "0.11"
sha2 = "0.11"
sha3 = "0.12"
md-5 = "0.11"
digest = "0.11"
hex = "0.4"
anyhow = "1.0"
tracing-appender = { version = "0.2.5", features = ["parking_lot"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "alloc",
  "env-filter",
  "fmt",
  "local-time",
  "parking_lot",
  "registry",
  "std",
] }

[build-dependencies]
clap_mangen = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Release profile tuned for throughput.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[dev-dependencies]
criterion = "0.8"
tempfile = "3.27"
