[package]
name = "sha-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sha]
path = ".."

[[bin]]
name = "parse_checksum_line"
path = "fuzz_targets/parse_checksum_line.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hash_chunking"
path = "fuzz_targets/hash_chunking.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_algorithm"
path = "fuzz_targets/parse_algorithm.rs"
test = false
doc = false
bench = false
